# sti-hackathon-2025

./: .env  .gitignore  GEMINI.md  HELP.md  IMPROVEMENT.md  README.md  REQUESTS.md  pyproject.toml
.gemini/: settings.json
.run/: mcp-server tests.run.xml  mcp-server.run.xml
apps/lifespan/: pyproject.toml
apps/lifespan-support/: pyproject.toml
apps/lifespan/src/: config.py  logger.py  main.py  mcp_server.py  schemas.py  server.py
apps/lifespan/src/database/: connect.py  connection.py  repository.py  schemas.py  user_repository.py
apps/lifespan/src/database/models/: base.py  user.py
apps/lifespan/src/db/: connect.py  repository.py
apps/lifespan/src/db/models/: user.py
apps/lifespan/src/mcp_tools/: tools.py
apps/lifespan/tests/: test_get_all_users.py  test_user_repository.py  test_users.py
apps/mcp-server/: README.md  pyproject.toml
apps/mcp-server/src/tools/: csv_tools.py  parquet_tools.py
apps/mcp-server/src/utils/: file_reader.py
apps/mix-server/: pyproject.toml  ruff.toml
apps/mix-server/src/: main.py  server.py
apps/quickstart/: README.md  pyproject.toml
apps/quickstart/src/: server.py
client/: main.py  pyproject.toml
dev-tools/: README.md  pyproject.toml  ruff.toml
docs/: API.md  GEMINI.md  HACKATHON.md  MCP.md  PROJECT.md  PYTHON.md
gemini/: settings.json
libs/utils/: pyproject.toml
lifespan/: README.md  pyproject.toml
lifespan/.run/: lifespan demo.run.xml  main.run.xml
lifespan/src/: config.py  main.py  mcp_server.py
mcp-server/: .env  README.md  pyproject.toml
mcp-server/src/: config.py  main.py  server.py
mcp-server/tools/: csv_tools.py  parquet_tools.py
mix-server/: README.md  pyproject.toml
mix-server/src/: server.py
mix-server/src/utils/: file_reader.py
nina/: README.md  openapi.yaml  pyproject.toml
nina-api-client/: README.md  pyproject.toml
nina-api-client/bundesamt_f_ü_r_bev_ö_lkerungsschutz_nina_api_client/api/archive/: get_full_warning_history.py
nina-api-client/bundesamt_f_ü_r_bev_ö_lkerungsschutz_nina_api_client/api/covid/: get_ars_covid_rules.py  get_covid_map.py
nina-api-client/bundesamt_f_ü_r_bev_ö_lkerungsschutz_nina_api_client/api/default/: get_event_code.py  get_event_codes.py  get_fa_qs.py  get_logos.py
nina-api-client/bundesamt_f_ü_r_bev_ö_lkerungsschutz_nina_api_client/api/warnings/: get_biwapp_map_data.py  get_dashboard.py  get_katwarn_map_data.py  get_lhp_map_data.py  get_warning.py
nina-api-client/bundesamt_f_ü_r_bev_ö_lkerungsschutz_nina_api_client/models/: __init__.py  archive_warning_history.py  archive_warning_history_history_item.py  ars_covid_rules.py  ars_covid_rules_common_item.py  ars_covid_rules_level.py  ars_covid_rules_regulations_sections_bund.py  ars_covid_rules_regulations_sections_land.py  ars_covid_rules_rules_item.py  ars_overview_result_item.py  ars_overview_result_item_i18n_title.py  ars_overview_result_item_payload_data_area.py  covid_infos.py  covid_infos_tip.py  covid_map_data.py  covid_map_legend.py  covid_map_style.py  covid_ticker_entry.py  covid_ticker_message.py  faq.py  faq_collection.py  geo_json_object.py  logo.py  logo_collection.py  map_warnings_item.py  notfalltipps.py  notfalltipps_article.py  notfalltipps_category.py  notfalltipps_collection.py  notfalltipps_image.py  notfalltipps_tip.py  rss_channel.py  rss_channel_image.py  rss_channel_item_item.py  version.py  warning.py
nina-api-client/nina_api_client/: __init__.py
nina-api-client/nina_api_client/api/covid/: get_covid_infos.py  get_covid_ticker_message.py
nina-api-client/nina_api_client/api/default/: get_data_version.py
nina-api-client/nina_api_client/api/warnings/: get_lhp_map_data.py  get_police_map_data.py
nina-api-client/nina_api_client/models/: archive_warning_history_history_item.py  ars_covid_rules.py  ars_covid_rules_regulations_sections_land_icon.py  ars_overview_result_item_payload_data_trans_keys.py  covid_map.py  covid_map_data.py  event_code.py  rss_channel.py  warning_info_item.py  warning_info_item_area_item.py
nina/src/: main.py  nina_client.py  server.py
people/: pyproject.toml
people/src/: config.py  connect.py  main.py  schemas.py  server.py  validation.py
people/tests/: test_config.py  test_database_connect.py  test_user_repository.py  test_validation.py
quickstart/: pyproject.toml
servers/employee/: .env  README.md  pyproject.toml
servers/gmaps/: README.md  main.py  pyproject.toml
servers/nina/: README.md  openapi.yaml  pyproject.toml
servers/nina-api-client/: README.md
servers/nina-classic/: pyproject.toml
servers/nina-classic/nina-api-client/: pyproject.toml
servers/nina-classic/nina-api-client/nina_api_client/api/archive/: get_warning_history.py
servers/nina-classic/nina-api-client/nina_api_client/api/covid/: get_covid_ticker.py
servers/nina-classic/nina-api-client/nina_api_client/api/default/: get_notfalltipps.py
servers/nina-classic/nina-api-client/nina_api_client/api/warnings/: get_dwd_map_data.py  get_mo_wa_srss_feed.py  get_mowas_map_data.py
servers/nina-classic/nina-api-client/nina_api_client/models/: ars_covid_rules_regulations.py  ars_covid_rules_regulations_sections_bund_icon.py  ars_covid_rules_regulations_sections_kreis.py  ars_covid_rules_regulations_sections_kreis_icon.py  ars_covid_rules_rules_item.py  ars_covid_rules_rules_item_icon.py  ars_overview_result_item_payload.py  covid_infos_category.py  covid_infos_image.py  key_value_array_item.py
servers/nina-classic/nina-classic/: README.md  openapi-python-client-config.yaml
servers/nina-classic/nina-classic/src/: server.py
servers/nina-classic/src/: main.py
src/: config.py  main.py  schemas.py  server.py
src/database/: address_repository.py  base_repository.py  connect.py  user_repository.py
src/models/: __init__.py  address.py  user.py
src/repositories/: base_repository.py  user_repository.py
src/services/: address_service.py  stats_service.py  user_service.py
tests/: test_address_repository.py  test_base_repository.py  test_config.py  test_database_connect.py  test_main.py  test_server.py  test_services.py  test_user.py  test_user_repository.py
(+87 files in other folders)
