[project]
name = "trip-planer-mcp-server"
version = "0.1.0"
description = "Trip Planer MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.3",
    "pycountry>=24.6.1",
]

# Common dev tools, installed locally, but not published
[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "openapi-python-client>=0.26.0"
]

[tool.uv.workspace]
members = [
    "servers/employee",
    "servers/nina",
    "servers/gmaps",
    "servers/nina-api-client",
    "client",
]
exclude = []

# Default groups inluded when using run/sync
[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = [
    "servers/employee/src",
    "servers/nina/src/"
]
testpaths = [
    "servers/employee/tests",
    "servers/nina/tests"
]
#addopts = [
#    "--verbose",
#    "--cov=servers/employee/src",
#    "--cov-report=term-missing",
#    "--cov-report=html",
#]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".run",
    ".vscode",
    "data"
]

[tool.ruff.format]
# Use double quotes instead of simple quotes for strings
quote-style = "double"
# Use spaces for indentations instead of tabs
indent-style = "space"
# Recognize line format (LF/CRLF) based on the system
line-ending = "auto"

[tool.ruff.lint]
# Only important rules
# F - Pyflakes errors (undefined names, unused imports, etc.)
# E - pycodestyle errors (PEP 8 style violations)
# W - pycodestyle warnings (PEP 8 style warnings)
# B - flake8-bugbear rules (likely bugs and design problems)
# SIM - flake8-simplify rules (suggestions for code simplification)
select = ["F", "E", "W", "B", "SIM"]
fixable = ["ALL"]
unfixable = []
