[project]
name = "mix-server"
version = "0.1.0"
description = "The MCP server application."
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.13.0",
    "panda>=0.3.1",
    "utils>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "dev-tools",
]

[tool.uv.sources]
utils = { path = "../libs/utils" }
dev-tools = { path = "../dev-tools" }
