[project]
name = "nina-api-client"
version = "1.0.0"
description = "A client library for accessing Bundesamt für Bevölkerungsschutz: NINA API"
authors = []
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

#[build-system]
#requires = ["setuptools>=61.0", "wheel"]
#build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
