[project]
name = "lifespan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.13.0",
    "sqlalchemy>=2.0.43",
    "utils",
]

[project.optional-dependencies]
dev = [
    "dev-tools",
]

[tool.uv.sources]
utils = { path = "../../libs/utils" }
dev-tools = { path = "../../dev-tools" }
