[project]
name = "mcp-server"
version = "0.1.0"
description = "The MCP server application."
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "pandas",
    "utils>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "dev-tools",
]

[tool.uv.sources]
utils = { workspace = true }
dev-tools = { workspace = true }
