[project]
name = "nina-mcp"
description = "Warnmeldungen des Bevölkerungsschutzes für Gefahrenlagen wie zum Beispiel Gefahrstoffausbreitung oder Unwetter"
version = "0.1.0"

dependencies = [
    "fastmcp>=2.11.3",
    "pydantic>=2.0.0",
    "nina-api-client",
]

[tool.uv.sources]
nina-api-client = { workspace = true }

[dependency-groups]
dev = [
    "openapi-mcp-generator>=0.1.1",
]
